# kuwa-aios

./: .gitignore  LICENSE  README.md  README_TW.md  requirements.in
.github/workflows/: build-win-installer.yaml
docker/: .env.sample  README.md  README_TW.md  build.sh  run.sh.sample  sync-root.sh  update.sh
docker/compose/: agent.yaml  base.yaml  chatgpt.yaml  copycat.yaml  custom-dbqa.yaml  dall-e.yaml  dev.yaml  diffuser.yaml  docqa.yaml  executor_base.yaml  gemini.yaml  gemma3-1b.yaml  groq.yaml  llamacpp.yaml  mcp_client.yaml  n8n.yaml  nemotron-4-340b-nim.yaml  nim.yaml  ollama.yaml  painter.yaml  pipe.yaml  rag.yaml  search.yaml  uploader.yaml  whisper.yaml
docker/executor/: Dockerfile  Dockerfile.dockerignore  cu121.dockerfile  docker-entrypoint  general.dockerfile  requirements-aarch64-cpu.in  requirements-x86_64-cpu.in  requirements-x86_64-cu121.in
docker/kernel/: Dockerfile
docker/multi-chat/: Dockerfile  Dockerfile.dockerignore  add-executor.php  app.env  check-update.php  docker-entrypoint  (+1 more)
docs/: configuration.md  contribution_guidelines.md  docker_advanced.md  docker_installation.md  docker_model_setup.md  docker_quick_installation.md  faq.md  windows_installation.md
src/executor/: chatgpt.py  debug.py  dummy.py  geminipro.py  huggingface.py  llamacpp.py  nim.py  nvidia_nim.py  ollama_proxy.py  pyproject.toml  requirements.txt
src/executor/agent/: main.py  requirements.in
src/executor/agent/lang/: agent.en.yml  agent.zh_tw.yml
src/executor/agent/lang/en/: agent.en.yaml
src/executor/agent/lang/zh_tw/: agent.zh_tw.yaml
src/executor/docqa/: docqa.py  download_model.py  requirements.in  requirements.txt  searchqa.py
src/executor/docqa/src/: docqa.py
src/executor/image_generation/: dall_e.py  download_model.py  main.py  qnn_stable_diffusion.py
src/executor/mcp/: requirements.in
src/executor/mcp/client/: main.py  mcp-client.py  mcp-openai.py
src/executor/mcp/server/: example.py
src/executor/pipe/: main.py
src/executor/pipe/src/: subprocess_helper.py  text_buffer.py
src/executor/pipe/test/: test-extract-arguments.py
src/executor/qnn_genie/: .gitignore  genie-t2t-run.py  main.py  requirements.in
src/executor/retriever/: main.py  requirements.txt
src/executor/retriever/src/: document_store.py  embedding_model_store.py  generator_executor.py  parallel_splitter.py  recursive_url_multimedia_loader.py  retriever_executor.py
src/executor/speech_recognition/: download_model.py  main.py  requirements-onnx.in  requirements.txt
src/executor/speech_recognition/benchmark/: bench_transcriber.py
src/executor/speech_recognition/src/: diarizer.py  separator.py  transcriber.py
src/executor/speech_recognition/src/onnx_backend/: model.py  onnx_transcriber.py
src/executor/src/kuwa/executor/: __init__.py  base_executor.py  cache.py  cli.py  llm_executor.py  logger.py  message.py  metrics.py  modelfile.py  multi_modality.py  util.py
src/executor/test/: test_llm_executor.py  test_modelfile.py
src/executor/uploader/: main.py
src/executor/working/model_workers-archive/worker_framework/: pyproject.toml
src/kernel/: pyproject.toml
src/kernel/src/kuwa/kernel/: functions.py  main.py
src/kernel/src/kuwa/kernel/routes/: executor.py
windows/: .gitignore  README.md  README_TW.md  build.bat  construct_rag.bat  start.bat  test_init.txt  tool.bat
(+411 files in other folders)
