[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/kuwa"]

[tool.hatch.version]
source = "vcs"
raw-options = {root = "../../"}
fallback-version = "0.1.0"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.hooks.vcs]
version-file = "src/kuwa/kernel/_version.py"

[tool.hatch.metadata.hooks.vcs]

[project]
name = "kuwa-kernel"
dynamic = ["version"]
authors = [
  { name="Drift", email="taifu9920923@gmail.com" },
  { name="Yung-Hsiang Hu", email="iftnt1999@gmail.com" },
]
description = "The kernel of Kuwa GenAI OS to manage GenAI applications."
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
dependencies=[
  "aiohttp>=3.11.18",
  "apscheduler>=3.11.0",
  "click>=8.1.8",
  "flask>=3.1.0",
  "flask-sse>=1.0.0",
  "huggingface-hub[cli]>=0.30.2",
  "requests>=2.32.3",
  "uvicorn~=0.29.0",
]

[project.urls]
"Homepage" = "https://kuwaai.tw/os/Intro"
"Bug Tracker" = "https://github.com/kuwaai/genai-os/issues"

[project.scripts]
kuwa-kernel = "kuwa.kernel.main:main"
